# dbsamizdapper

./: .cursorrules  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENT_REVIEW.md  CHANGELOG.md  CHANGES.md  CODE_STANDARDS_REVIEW.md  DEVELOPMENT.md  ISSUE_11_PLAN.md  README.md  README.original.md  RECOMMENDATIONS.md  TESTING.md  TEST_COVERAGE_IMPROVEMENTS.md  TEST_DISCOVERABILITY_REVIEW.md  TEST_STATUS.md  USAGE.md  coverage.xml  dbsamizdat  docker-compose.yml  justfile  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: black.yaml  main.yml  pytest.yaml
agents/: 10-TEST-QUALITY-REVIEW.md  12-FINAL-SUMMARY.md
dbsamizdat/: __init__.py  api.py  apps.py  dbsamizdat_defs.py  django_api.py  exceptions.py  graphvizdot.py  libdb.py  libgraph.py  loader.py  runner.py  samizdat.py  samtypes.py  test_samizdats.py
dbsamizdat/dbsamizdat/: libdb.py  loader.py  runner.py  test_samizdats.py
dbsamizdat/runner/: __init__.py  cli.py  commands.py  context.py  executor.py  helpers.py  types.py
examples/: simple_example.py
sample_app/: dbsamizdat_defs.py  test_samizdats.py
src/dbsamizdat/: apps.py  samizdat.py  util.py
src/dbsamizdat/management/commands/: dbsamizdat.py
tests/: conftest.py  test_api.py  test_best_practices.py  test_cli.py  test_commands_integration.py  test_cursor_protocol.py  test_django_integration.py  test_exceptions.py  test_executor_integration.py  test_function_signature.py  test_graphvizdot.py  test_libdb_integration.py  test_loader.py  test_module_import.py  test_runner_helpers.py  test_samizdat_table.py  test_sample.py  test_sql_template_edge_cases.py  test_template_variables.py  test_trigger_lsp.py  test_util.py
