[project]
name = "dbsamizdapper"
version = "0.0.4"
description = ""
authors = [
    {name = "Josh Brooks", email = "josh@catalpa.io"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "toposort>=1.10,<2.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.2",
    "pytest>=7.3.1",
    "mypy>=1.3.0",
    "types-toposort>=1.10.0.0",
    "pytest-cov>=4.1.0",
    "python-dotenv>=1.0.0",
]

# In addition you will need one of
# psycopg / psycopg2

# One option:

# psycopg = {extras = ["binary"], version = "^3.1.9"}

# psycopg2-binary = "*"
# types-psycopg2 = "*"

[tool.hatch.build.targets.wheel]
packages = ["dbsamizdat"]

[tool.hatch.build.targets.wheel.sources]
"dbsamizdat" = "dbsamizdat"

[tool.pylint.format]
max-line-length = "119"

[tool.isort]
profile = 'black'
line_length = 119
multi_line_output = 3
include_trailing_comma = true
skip_glob = ["pnds_db/metabase/*"]

[tool.black]
line-length = 119
target-version = ['py310']

[[tool.mypy.overrides]]
module = [
    "psycopg",
    "psycopg2"
]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
