[project]
name = "dbsamizdapper"
version = "0.0.5"
description = ""
authors = [{name = "Josh Brooks", email = "josh@catalpa.io"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "toposort>=1.10",
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.2",
    "pytest>=7.3.1",
    "mypy>=1.3.0",
    "types-toposort>=1.10.0.0",
    "pytest-cov>=4.1.0",
    "python-dotenv>=1.0.0",
]

testing = [
    "psycopg2-binary",
    "types-psycopg2",
]

psycopg3 = [
    "psycopg[binary]>=3.1.9",
]

django = [
    "django>=4.2,<5.0",
    "django-stubs>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dbsamizdat"]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "sample_app/",
]

[tool.pylint.format]
max-line-length = "119"

[tool.isort]
profile = 'black'
line_length = 119
multi_line_output = 3
include_trailing_comma = true
skip_glob = ["pnds_db/metabase/*"]

[tool.black]
line-length = 119
target-version = ['py312']

[[tool.mypy.overrides]]
module = [
    "psycopg",
    "psycopg2"
]
ignore_missing_imports = true
