[project]
name = "dbsamizdapper"
version = "0.1.0"
description = ""
authors = [{name = "Josh Brooks", email = "josh@catalpa.io"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "toposort>=1.10",
]

[project.optional-dependencies]
django = [
    "django>=4.2,<5.0",
    "django-stubs>=4.2.0",
]

psycopg3 = [
    "psycopg[binary]>=3.1.9",
]

[dependency-groups]
dev = [
    "black>=23.3.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.2",
    "mypy>=1.3.0",
    "types-toposort>=1.10.0.0",
    "python-dotenv>=1.0.0",
]

testing = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "psycopg2-binary",
    "types-psycopg2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dbsamizdat"]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "sample_app/",
]

[tool.pylint.format]
max-line-length = "119"

[tool.isort]
profile = 'black'
line_length = 119
multi_line_output = 3
include_trailing_comma = true
skip_glob = ["pnds_db/metabase/*"]
extend_skip = [".venv", "__pycache__", ".git", ".pytest_cache", ".mypy_cache", "dist", "build"]

[tool.black]
line-length = 119
target-version = ['py312']
extend-exclude = '''
/(
    \.venv
    | __pycache__
    | \.git
    | \.pytest_cache
    | \.mypy_cache
    | dist
    | build
    | .*\.egg-info
)/
'''

[[tool.mypy.overrides]]
module = [
    "psycopg",
    "psycopg2"
]
ignore_missing_imports = true
